SCTK Version pre-2.3 - Release xxx
  [*] Fixed asclite when no input given
  [+] Added UEM inplementation directly to asclite
  [+] -wordalign-cost options for asclite adding some cost variance
      depending in the word syntaxic distance
  [+] Added cumulative table to HTML reports
  [+] Added man and HTML docs for tools
  [/] Changed the speaker auto-overlap behavior from internal to command-
      line options for asclite
  [/] Inter Segment Gaps by default for every file type in asclite
  [/] Update headers disclaimer and file format

SCTK Version 2.2.4 - Release May 1, 2007
  [+] Added block size and force compression in hubscr.pl
  [+] Added block size limit to 1GB
  [+] Added block computation less aggressive to allow bigger block size
  [*] Fixed linking issue for RTTM and STM files in cause of empty segment
  [*] Fixed display issue with align2html

SCTK Version 2.2.3 - Release April 18, 2007
  [*] Fix the time computation in html report when ISG vs. empty segment
  [/] Fix computation percentage for this table of html display
  [/] Better handling on exceptions to drop segment groups from alignments
  [/] Change some outputs to debug level instead of info level
  [/] Better handling of the memory threshold
  [/] Changed from ucl library to lzo library for compression
  [+] Safer memory deallocation in the LCM
  [+] Minimum command line option to drop the small alignments
  
SCTK Version 2.2.2 - Release March 23, 2007
  [/] Speed up the use of Compression Matrix by not using System Timer
  [/] New implementation of the compressed Levenshtein Matrix to avoid
      overhead creation
  [*] Fix the output report file generation for asclite

SCTK Version 2.2.1 - Release March 13, 2007
  [*] Fixed the sequence number in SGML when using RTTM Refs
  [+] Added Difficulty limit

SCTK Version 2.2.0 - Release March 12, 2007
  [*] test: fixed some tests
  [*] core: fixed align2html display
  [+] core: added compression to align bigger matrices