@@ -1,10 +1,6 @@
-# **********************************************************
-# Makefile for rfilter1 Directory
-# **********************************************************
 SHELL = /bin/sh
 PREFIX=
 bindir = $(PREFIX)/bin
-T=../test_suite
 
 all: align2html.pl
 
