@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 
 # RTTMVALIDATOR
-# Author: Jerome Ajot
+# Author: Jon Fiscus
 #
 # This software was developed at the National Institute of Standards and Technology by 
 # employees of the Federal Government in the course of their official duties. Pursuant
