@@ -1,0 +1,21 @@
+SHELL = /bin/sh
+PREFIX=
+bindir = $(PREFIX)/bin
+
+all: stmValidator.pl
+
+stmValidator.pl: stmValidator-main.pl buildInstallVersion.pl
+	perl buildInstallVersion.pl > stmValidator.pl
+	chmod +x stmValidator.pl
+
+check: all
+	(cd test_suite; $(SHELL) RunTest.sh ../stmValidator.pl)
+
+install: all
+	perl buildInstallVersion.pl > $(bindir)/stmValidator.pl
+	chmod +x $(bindir)/stmValidator.pl
+
+clean:
+
+distclean: clean
+	rm -r *~ makefile
