@@ -1,0 +1,6 @@
+;; This file is an example of STM file
+;; Do not modify if you dont know what you are doing
+SHOW_1 1 CHRIS  1.0 6.0 <M> JAVA WILL RULES THE WORLD
+SHOW_1 2 JEROME 3.0 5.0 <M> OR NOT
+SHOW_2 1 NICO   1.0 4.0 <M> NICO IS HERE
+SHOW_2 2 JON    1.0 3.0 <M> 
